--- a/3/index.html
+++ b/3/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>es 3 con ES6</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div id="word"></div>
   <script src="js/script.js" charset="utf-8"></script>
 </body>
 </html>
